--- a/en/_posts/2021-11-30-sarah.md
+++ b/en/_posts/2021-11-30-sarah.md
@@ -5,7 +5,7 @@ vid: "9nB6kSq_0-o"
 
 # In Conversation With Sarah Harkleroad - how I enjoy talking to Nozbe customers!
 
-In my upcoming book, [#NoOffice](https://NoOffice.org/) I describe the concept of [Meeting customers](https://NoOffice.org/customers) and explain why and how I regularly talk to many of our thousands upon thousands of customers. I love it. I love meeting new people, getting know different industries. And most of all I like getting to know the people who’s life my [Nozbe][n] app impacts. And recently I had a pleasure of talking to Sarah, and I really enjoyed it:
+In my upcoming book, [#NoOffice](https://NoOffice.org/) I describe the concept of [Meeting customers](https://NoOffice.org/customers) and explain why and how I regularly talk to many of our thousands upon thousands of customers. I love it. I love meeting new people, getting know different industries. And most of all I like getting to know the people who’s life my [Nozbe][n] app impacts. And recently [I had a pleasure of talking to Sarah][l], and I really enjoyed it:
 
 {% include video.html id=page.vid %}
 
