--- a/en/_posts/2021-12-08-john.md
+++ b/en/_posts/2021-12-08-john.md
@@ -3,18 +3,20 @@ tags: [life]
 cover: "john.jpg"
 ---
 
-# Dear John… let’s have a last chat about COVID… for the sake of our friendship.
+# Dear John… let’s have one last chat about COVID… for the sake of our friendship
 
-Dear John[^1], you are one of my closest friends. You're smart, driven, intelligent, caring and I've been always able to count on you. Yet now, as we're both dealing with this global [COVID-19 pandemic](/covid/), **we're drifting apart**. You didn't [get vaccinated](/vaccine/) and whenever I raise the subject, we get to a heated debate that just makes both of us angry. That's why in this letter I want to take a different approach - I want to appeal to your intelligence by not trying to convince you of anything, but by laying out facts before and by trusting your judgement:
+Dear John[^1], you are one of my closest friends. You're smart, driven, intelligent, caring and I've been always able to count on you. Yet now, as we're both dealing with this global [COVID-19 pandemic](/covid/), **we're drifting apart**. You didn't [get vaccinated](/vaccine/) and whenever this comes up, we get to a heated debate that just makes both of us angry. That's why in this letter I want to take a different approach - I want to appeal to your intelligence by not trying to convince you of anything, but by laying out facts before and by trusting your judgement:
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
+It's a long letter, please take your time to read it, thank you:
+
 * TOC
 {:toc}
 
-## Is the COVID-19 pandemic real?
+## Is the COVID-19 pandemic real? 🦠
 
 When we talked, I heard several times from you how: *"this virus is just a flu"* or *"it's not as deadly as we thought"* or *"I'm not afraid of this virus"*. You even may have used a word *"scamdemic"* to just say that this pandemic is not real.
 
@@ -22,7 +24,7 @@ While the above are opinions, let's look at the facts:
 
 * In the USA alone, **more than 800,000 people died** of COVID[^2], while annually around [20-50,000 used to die of seasonal flu](https://www.cdc.gov/flu/about/burden/index.html).
 * In the period of March 2020 and October 2021, **960,000 people in the EU died more** than in the analogical dates in the last 5 years.[^3] That's almost 1 Million of additional deaths in Europe alone.
-* Globally [**more than 5 Million people died of COVID-19**](https://covid19.who.int). That's like if countries like Costa Rica, New Zealand or Ireland completely vanished within just two last years.
+* Globally more than [**5 Million people died of COVID-19**](https://covid19.who.int). That's like if countries like Costa Rica, New Zealand or Ireland completely vanished within just two last years.
 
 These are the facts. These are statistics compiled by hundreds of governments and independent analysts.
 
@@ -32,17 +34,19 @@ And if you need people's opinions, please visit your local hospital and intervie
 
 ### Recent developments as the COVID-19 pandemic progresses
 
-- Virus mutates - after the original virus started spreading and people were getting ill, there were more mutations until a very strong and highly-contagious [Delta variant showed up](https://www.cdc.gov/coronavirus/2019-ncov/variants/delta-variant.html)
-- The [Delta variant affects children much more](https://www.cdc.gov/mmwr/volumes/70/wr/mm7036e2.htm) as *hospitalization rates among children and adolescents rose nearly five-fold, also hospitalization rates were 10 times higher among unvaccinated than among fully vaccinated adolescents*.
-- It still keeps mutating - the new [Omicron variant](https://www.nytimes.com/article/omicron-coronavirus-variant.html) is even more contagious than Delta.
+- Virus mutates - after the original virus started spreading and people were getting ill, the infections started mutating until a highly-contagious [Delta variant showed up](https://www.cdc.gov/coronavirus/2019-ncov/variants/delta-variant.html) and it's now the dominant type of COVID-19 virus.
+- Children became affected - [Delta affects children much more](https://www.cdc.gov/mmwr/volumes/70/wr/mm7036e2.htm) as *hospitalization rates among children and adolescents rose nearly five-fold, also hospitalization rates were 10 times higher among unvaccinated than among fully vaccinated adolescents*.
+- Virus keeps mutating - the new [Omicron variant](https://www.nytimes.com/article/omicron-coronavirus-variant.html) is even more contagious than Delta.
 
-## Do the masks work?
+## Do the masks work? 😷
 
-I hate wearing the masks. They're simply annoying and it's hard to see people's facial expressions behind them. When we talked you said to me that you thought that the masks didn't really work anyway.
+Personally, I hate wearing masks. They're simply annoying and it's hard to see people's facial expressions behind them. When we talked you said to me that you thought that the masks didn't really work anyway.
 
-BTW, on the photo above I'm smiling to you from under this mask!
+*BTW, on the photo above I'm smiling to you from under this pink mask! 😊*
 
-First off, there is this study where [among 139 clients exposed to two symptomatic hair stylists with confirmed COVID-19 while both the stylists and the clients wore face masks, no symptomatic secondary cases were reported](https://www.cdc.gov/mmwr/volumes/69/wr/mm6928e2.htm). Plus, there are [additional studies done on the efficacy of the masks](https://www.epa.gov/sciencematters/epa-researchers-test-effectiveness-face-masks-disinfection-methods-against-covid-19).
+I don't like masks, but…
+
+First off, there is this study where [among 139 clients exposed to two symptomatic hair stylists with confirmed COVID-19 while both the stylists](https://www.cdc.gov/mmwr/volumes/69/wr/mm6928e2.htm) and the clients wore face masks, no symptomatic secondary cases were reported. Plus, there are [additional studies done on the efficacy of the masks](https://www.epa.gov/sciencematters/epa-researchers-test-effectiveness-face-masks-disinfection-methods-against-covid-19).
 
 Second, there's just logic that shows how mask do their job. You can try it yourself:
 
@@ -54,15 +58,15 @@ While the masks don't protect people 100% from infections and they're not a cure
 
 For more information, check out these [CDC guidelines on masks](https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/about-face-coverings.html).
 
-And recently data showed that by wearing a mask and practicing social distancing [last year we managed to basically stop having seasonal flu at all!](https://www.theatlantic.com/health/archive/2021/10/flu-season-winter-america-choice/620373/) Turns out **flu is a choice**.
+And recently data showed that by wearing a mask and practicing social distancing last year we managed to basically [stop having seasonal flu at all!](https://www.theatlantic.com/health/archive/2021/10/flu-season-winter-america-choice/620373/) Turns out **flu is a choice**.
 
-## Do the vaccines work?
+## Do the vaccines work? 💉
 
 Let's try to forget about the emotions related to the vaccines and take a hard look at the data we have, so that we can rationally judge the vaccines by their merit.
 
 ### Facts about the vaccines in general
 
-- [Vaccines don't have any long-term effects](https://www.dw.com/en/fact-check-can-covid-vaccines-lead-to-long-term-health-problems/a-59667465). All they do is go in, stimulate a natural immune response from your body and that's it. That's why when you're vaccinated, you might have a fever or feel bad in the first week after taking your jab. It's your body reacting to the stimulus of the vaccine. Very rarely they have side-effects.[^4]
+- [Vaccines don't have any long-term effects](https://www.dw.com/en/fact-check-can-covid-vaccines-lead-to-long-term-health-problems/a-59667465). All they do is go in, stimulate a natural immune response from your body and that's it. That's why when you're vaccinated, you might have a fever or feel bad in the first week after taking your jab. It's your body reacting to the stimulus of the vaccine. However, very rarely they have side-effects.[^4]
 - [Vaccines saved lives of millions of people to date.](https://www.weforum.org/agenda/2020/04/how-vaccines-changed-the-world/) They practically eliminated diseases like polio, measles and others. Diseases that used to kill or cripple millions of kids in the 20th century alone.
 - Even if some vaccines were optional in some countries, the diseases are monitored and if there's an uptake, [they become mandatory to save lives](https://www.loc.gov/item/global-legal-monitor/2020-03-11/germany-new-act-makes-measles-vaccinations-mandatory/)
 
@@ -78,7 +82,7 @@ Let's try to forget about the emotions related to the vaccines and take a hard l
 
 Now that we are two years into this virus (it's the end of 2021 and the virus was first discovered at the end of 2019), it has affected the entire world. Here are some findings:
 
-- [Weak vaccines require strong laws](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate).[^8]
+- Weak vaccines will [require strong laws](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate).[^8]
 - When we reach 80% or 90% of vaccinated in some countries, we can witness a "vaccination paradox", meaning more people vaccinated are sick than these who are not vaccinated. This information can be easily manipulated as a proof that vaccines don't work, when in fact it's the opposite.[^9]
 - People vaccinated also get sick and even sometimes die. However the percentage of people vaccinated in a country is strongly related with the number of people dying daily, just look at this chart:
 
@@ -86,29 +90,27 @@ Now that we are two years into this virus (it's the end of 2021 and the virus wa
 
 There is a strong correlation between the percentage of population vaccinated and the number of deaths per 1 million of people.
 
-## What if you don't believe any of this?
+## What if you don't believe any of this? 🙏
 
-I don't think people use the word *believe* correctly.
+I [believe in God](https://sliwinski.com/catholic/). It's a *belief* because I cannot prove it to you for certain that He really exists.
 
-I [believe in God](https://sliwinski.com/catholic/). It's a belief because I cannot prove it to you for certain that He really exists.
-
-However, please re-consider statements like: *"I don't believe in this pandemic"* or *"I don't believe in masks"* or *"I don't believe in vaccines"*. These statements are incorrect.
+However, please re-consider statements like: *"I don't believe in this pandemic"* or *"I don't believe in masks"* or *"I don't believe in vaccines"*. These statements are by definition incorrect.
 
 When faced with facts and data which I quoted above, the only correct statement would be: *"I don't believe in these facts"*. However this would mean that you don't trust any of the sources of this data, which would mean that most scientists, virologists and medical professionals, together with most administrative leaders and statisticians are all in together on a big data manipulation. Like all of them in the same time.
 
-## Who can I trust then?
+## Who can I trust then? 👍 
 
-Trust your own judgement. Please take a look at the data and facts from these diverse sources, aggregated by medical specialists and statisticians from all over the world. Look at the data and draw your own conclusions.
+**Trust your own judgement.** Please take a look at the data and facts from these diverse sources, aggregated by medical specialists and statisticians from all over the world. Look at the data and draw your own conclusions.
 
 I spent hours collecting them for you.
 
-Don't trust conspiracy theories as the goal of these stories is to create a certain narrative and to prove their point by just choosing a small subset of data and quoting it out of context. You can do better than that - get the entire context yourself by studying data.
+**Don't trust conspiracy theories** as the goal of these stories is to create a certain narrative and to prove their point by just choosing a small subset of data and quoting it out of context. You can do better than that - get the entire context yourself by studying data.
 
-Don't trust your political leaders as they always have a hidden agenda to get votes for their next elections. Many political leaders have proven over and over that they're ready to sacrifice human lives as an excuse not to introduce restrictions or protective measures.
+**Cautiously trust the government leaders** as they always have a hidden agenda to get votes for their next elections. Many political leaders have proven over and over that they're ready to sacrifice human lives as an excuse not to introduce restrictions or protective measures.
 
-Trust the medical professionals. However, just as with any illness, if it's serious, everyone tells you to *get the second opinion*. Do the same thing and ask several doctors you trust about any of this. Talk to them. They are here to help and many of them have lived through the peaks of this pandemic so they've got stories to tell.
+**Trust the medical professionals.** However, just as with any illness, if it's serious, everyone tells you to *get the second opinion*. Do the same thing and ask several doctors you trust about any of this. Talk to them. They are here to help and many of them have lived through the peaks of this pandemic so they've got stories to tell.
 
-## Why am I writing all this to you?
+## Why am I writing all this to you? 😀
 
 Now that we're more than 1500 words in, you might be asking yourself, why I'm writing all this to you, my friend.
 
@@ -117,6 +119,8 @@ Because I care for you and our friendship.
 I remember back in February of 2020 [I was skeptical at first about this whole novel virus](/covid). However, as the new information was coming in, I started changing my mind. And I've tried to be rational about this as much as I could and keep looking at the facts and data.
 
 It's OK to change your mind. It's not a *I told you so* moment.
+
+We can't be too stubborn when it comes to human lives.
 
 > It's a moment for all of us to look at the facts, look a the effects of this situation globally, take perspective and look after ourselves the best way we can. Let's take care of each other as friends and as a society.
 
@@ -132,11 +136,9 @@ Your friend with ❤️
 
 He just turned 95 and was as healthy as a horse. However someone visited him briefly and gave him COVID. My grandfather didn't have much fever and was rather OK, but over next few days started feeling weaker. Until he collapsed one day. Turns out the virus was shattering his lungs in the meantime. He didn't recover and died in the hospital.
 
-I know I'm lucky that I got to have a grandfather in my life until I was in my forties. Many didn't. But he didn't have to die this year. He could have reached 100.
+I know I'm lucky that I got to have a grandfather in my life until I was in my forties. Many didn't. But he didn't have to die this year. He could have reached 100. Rest In Peace 😇
 
-How can someone with a virus kill you by just visiting?
-
-This is not fair!
+How can someone with a virus kill you by just visiting? This is so not fair!
 
 ![{{ page.title }} 3](/img/john-3.jpg)
 
@@ -147,7 +149,7 @@ This is not fair!
 [^5]: [Check out the differences between different COVID-19 vaccines](https://www.mayoclinic.org/coronavirus-covid-19/vaccine/comparing-vaccines) and also look at the [differences between COVID-19 vaccines and other traditional vaccines](https://www.medicalnewstoday.com/articles/how-do-covid-19-vaccines-compare-with-other-existing-vaccines#Polio-vaccine-effectiveness)
 [^6]: [The facts about aborted cells](https://www.nebraskamed.com/COVID/you-asked-we-answered-do-the-covid-19-vaccines-contain-aborted-fetal-cells) confirms it: *it is true that decades ago, scientists decided to use fetal tissue to start the cell lines we use to test drugs today. However, the description of ongoing modern fetal tissue harvesting to create vaccines is dishonest sensationalism.*
 [^7]: [Vatican confirms that if you don't want to vaccinate, you should adhere to all preventable protocols](https://www.vatican.va/roman_curia/congregations/cfaith/documents/rc_con_cfaith_doc_20201221_nota-vaccini-anticovid_en.html) and avoid spreading the virus: *the morality of vaccination depends not only on the duty to protect one's own health, but also on the duty to pursue the common good*.
-[^8]: [Read the entire article, but here are excerpts](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate): *(a person's) decision to remain unvaccinated increases the risk that others will contract COVID-19. But anyone can choose to eliminate that risk by getting vaccinated. Therefore, society is not justified in violating Robert’s personal liberty by mandating that, in order to participate in civic life, he take a vaccine that he would rather avoid. (..) But these assumptions are empirically flawed. And because they are flawed, a liberal society in fact has a strong interest in implementing vaccine mandates. (..) Therefore, in the real world, Robert’s decision to remain unvaccinated imposes costs, at a minimum, on children, disadvantaged communities, people in poorer countries, already-vaccinated individuals and funders and patients of the health care system. Moreover, none of these costs can be eliminated under our current constraints. (..) In a perfect world, liberty should prevail. But ours is not a perfect world, which makes vaccine mandates a legitimate part of a liberal society.*
+[^8]: [Read the entire article, but here are excerpts](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate): *(a person's) decision to remain unvaccinated increases the risk that others will contract COVID-19. But anyone can choose to eliminate that risk by getting vaccinated. Therefore, society is not justified in violating (a person's) personal liberty by mandating that, in order to participate in civic life, he take a vaccine that he would rather avoid. (..) But these assumptions are empirically flawed. And because they are flawed, a liberal society in fact has a strong interest in implementing vaccine mandates. (..) Therefore, in the real world, (a person's) decision to remain unvaccinated imposes costs, at a minimum, on children, disadvantaged communities, people in poorer countries, already-vaccinated individuals and funders and patients of the health care system. Moreover, none of these costs can be eliminated under our current constraints. (..) In a perfect world, liberty should prevail. But ours is not a perfect world, which makes vaccine mandates a legitimate part of a liberal society.*
 [^9]: [The Apparent Paradox Of Covid-19 Positive Vaccinees: A Story Of Statistical Deception](https://www.emergency-live.com/health-and-safety/the-apparent-paradox-of-covid-19-positive-vaccinees-a-story-of-statistical-deception/): *Even if the probability of a vaccinated person testing positive is a tenth of that of an unvaccinated person, the total number of daily positives among the ranks of the vaccinated is bound to increase as the total number of vaccinated people in the population grows.*
 
 [n]: https://michael.gratis/nozbe
