--- a/en/_posts/2021-12-08-john.md
+++ b/en/_posts/2021-12-08-john.md
@@ -83,7 +83,8 @@ Let's try to forget about the emotions related to the vaccines and take a hard l
 Now that we are two years into this virus (it's the end of 2021 and the virus was first discovered at the end of 2019), it has affected the entire world. Here are some findings:
 
 - Weak vaccines will [require strong laws](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate).[^8]
-- When we reach 80% or 90% of vaccinated in some countries, we can witness a "vaccination paradox", meaning more people vaccinated are sick than these who are not vaccinated. This information can be easily manipulated as a proof that vaccines don't work, when in fact it's the opposite.[^9]
+- Even strong, healthy and young [people die of COVID-19](https://www.theguardian.com/society/2021/nov/30/life-tragic-death-john-eyers-fitness-fanatic-who-refused-covid-vaccine) because of their genetic condition[^9]
+- When we reach 80% or 90% of vaccinated in some countries, we can witness a "vaccination paradox", meaning more people vaccinated are sick than these who are not vaccinated. This information can be easily manipulated as a proof that vaccines don't work, when in fact it's the opposite.[^10]
 - People vaccinated also get sick and even sometimes die. However the percentage of people vaccinated in a country is strongly related with the number of people dying daily, just look at this chart:
 
 ![{{ page.title }} 2](/img/john-2.jpg)
@@ -150,7 +151,8 @@ How can someone with a virus kill you by just visiting? This is so not fair!
 [^6]: [The facts about aborted cells](https://www.nebraskamed.com/COVID/you-asked-we-answered-do-the-covid-19-vaccines-contain-aborted-fetal-cells) confirms it: *it is true that decades ago, scientists decided to use fetal tissue to start the cell lines we use to test drugs today. However, the description of ongoing modern fetal tissue harvesting to create vaccines is dishonest sensationalism.*
 [^7]: [Vatican confirms that if you don't want to vaccinate, you should adhere to all preventable protocols](https://www.vatican.va/roman_curia/congregations/cfaith/documents/rc_con_cfaith_doc_20201221_nota-vaccini-anticovid_en.html) and avoid spreading the virus: *the morality of vaccination depends not only on the duty to protect one's own health, but also on the duty to pursue the common good*.
 [^8]: [Read the entire article, but here are excerpts](https://thehill.com/opinion/healthcare/570378-the-paradox-at-the-heart-of-the-vaccine-mandate-debate): *(a person's) decision to remain unvaccinated increases the risk that others will contract COVID-19. But anyone can choose to eliminate that risk by getting vaccinated. Therefore, society is not justified in violating (a person's) personal liberty by mandating that, in order to participate in civic life, he take a vaccine that he would rather avoid. (..) But these assumptions are empirically flawed. And because they are flawed, a liberal society in fact has a strong interest in implementing vaccine mandates. (..) Therefore, in the real world, (a person's) decision to remain unvaccinated imposes costs, at a minimum, on children, disadvantaged communities, people in poorer countries, already-vaccinated individuals and funders and patients of the health care system. Moreover, none of these costs can be eliminated under our current constraints. (..) In a perfect world, liberty should prevail. But ours is not a perfect world, which makes vaccine mandates a legitimate part of a liberal society.*
-[^9]: [The Apparent Paradox Of Covid-19 Positive Vaccinees: A Story Of Statistical Deception](https://www.emergency-live.com/health-and-safety/the-apparent-paradox-of-covid-19-positive-vaccinees-a-story-of-statistical-deception/): *Even if the probability of a vaccinated person testing positive is a tenth of that of an unvaccinated person, the total number of daily positives among the ranks of the vaccinated is bound to increase as the total number of vaccinated people in the population grows.*
+[^9]: [The life and tragic death of John Eyers – a fitness fanatic who refused the vaccine](https://www.theguardian.com/society/2021/nov/30/life-tragic-death-john-eyers-fitness-fanatic-who-refused-covid-vaccine): *Butler-Laporte and his colleagues found that people with variants in up to a dozen locations on the human genome were at higher risk of developing severe Covid, should they be unfortunate enough to be infected with the virus. People with variants on the chromosome 3 region alone were up to twice as likely to develop severe Covid as someone without that genetic mutation. Chromosome 3 mutations are carried in about 10% of people of European ancestry, meaning that such people have a 10% chance of being twice as susceptible to severe Covid infection.*
+[^10]: [The Apparent Paradox Of Covid-19 Positive Vaccinees: A Story Of Statistical Deception](https://www.emergency-live.com/health-and-safety/the-apparent-paradox-of-covid-19-positive-vaccinees-a-story-of-statistical-deception/): *Even if the probability of a vaccinated person testing positive is a tenth of that of an unvaccinated person, the total number of daily positives among the ranks of the vaccinated is bound to increase as the total number of vaccinated people in the population grows.*
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
