--- a/en/_posts/2021-12-15-steph.md
+++ b/en/_posts/2021-12-15-steph.md
@@ -25,7 +25,6 @@ Basically, everyone wants to be like Steph.
 
 Even though Steph is already considered the greatest shooter of all time, he's not resting on his laurels and this past summer [he's been perfecting his shooting even more](https://www.nba.com/news/after-offseason-focused-on-perfection-stephen-curry-could-be-even-more-unstoppable):
 
-> After shattering numerous scoring records and climbing to No. 2 on the NBA’s all-time list for most 3-pointers (2,842), Curry relied on shot-tracking technology that determined that not all of his made baskets are created equal.\\
 > Each time Curry hoisted a shot, the technology tracked the ball’s movement, the ball’s arc and how deep the ball went into the rim. If the ball failed to drop through the middle of the rim, Curry and Payne simply counted that attempt as a missed shot. Curry and Payne also kept the same standard when he took shots on the move, an approach he took to emulate shooting against a swarming defender.\\
 > “It was a mental challenge of trying to be as perfect as possible,” Curry told NBA.com “If I make 10 shots and they are outside of that window and then I have to do 10 more for that drill, it becomes a conditioning drill if you don’t knock them down earlier in the drill. So you have to stay locked in and focused. It creates a game-like situation with pressure. You don’t want to be out there all day feeling dog tired because you can’t beat the drill.”
 
@@ -35,7 +34,7 @@ This is true greatness. You never stop. You keep getting better. Keep improving.
 
 ## This is not over! #StephGonnaSteph
 
-The NBA season is only half way through and the Warriors are winning most of their games. Now as we wait for the comeback of [Klay Thompson](https://en.m.wikipedia.org/wiki/Klay_Thompson) and 
+The NBA season is only half way through and the Warriors are winning most of their games. Now as we wait for the comeback of [Klay Thompson](https://en.m.wikipedia.org/wiki/Klay_Thompson) after his injury and with the [Splash Brothers duo](https://en.m.wikipedia.org/wiki/Splash_Brothers) they are a championship contender again!
 
 Until then, let's ponder on Steph's greatness:
 
