--- a/en/_posts/2021-12-22-display.md
+++ b/en/_posts/2021-12-22-display.md
@@ -5,7 +5,7 @@ cover: "display.jpg"
 
 # 7 lives of a decade-old trusty Apple Thunderbolt Display
 
-On the last episode of No Office FM podcast my co-host, Rafal, asked me about a lonely display hanging on the wall behind me. He didn't know why I had this display there. I had no good answer, until the weekend came and I figured it out. I gave my good old trusty, almost-10-year old [Apple Thunderbolt Display](https://en.wikipedia.org/wiki/Apple_Thunderbolt_Display) another, actually seventh, life! Just check out its history:
+On the [last episode of No Office FM podcast](/noofficefm-32/) my co-host, Rafal, asked me about a lonely display hanging on the wall behind me. He didn't know why I had this display there. I had no good answer, until the weekend came and I figured it out. I gave my good old trusty, 10-year-old [Apple Thunderbolt Display](https://en.wikipedia.org/wiki/Apple_Thunderbolt_Display) another, actually seventh, life! Just check out its history:
 
 <!--More-->
 
