--- a/en/_posts/2014-06-02-design.md
+++ b/en/_posts/2014-06-02-design.md
@@ -1,5 +1,5 @@
 ---
-tags: [nozbe,business]
+tags: [nozbe,business,imagazine]
 img: "design-nozbe.jpg"
 ---
 
@@ -7,7 +7,7 @@ img: "design-nozbe.jpg"
 
 On this blog I have described the way I work, my tricks, gizmos and gadgets many times over. Today I am going to show you what is my job all about and how much in common it has with design. I'm also going to reveal why I read all the books about people like Steve Jobs and Johnathan Ive, why I admire them immensely and why I am such a fun of their products.
 
-*Note: The following article appeared fist in the April issue of [iMagazine][] - the leading lifestyle magazine for Apple enthusiasts in Poland. I'm a regular contributor and write my monthly productivity column there.*
+*Note: The following article appeared fist in the April issue of [iMagazine](/pl/design/) - the leading lifestyle magazine for Apple enthusiasts in Poland. I'm a regular contributor and write my monthly productivity column there.*
 
 <!--More-->
 
