updates, missing greg

--- a/en/_posts/2017-07-12-newipad.md
+++ b/en/_posts/2017-07-12-newipad.md
@@ -3,7 +3,7 @@ tags: [ipadonly]
 img: "newipad.jpg"
 ---
 
-# How setting up a new iPad Pro for work can is an exercise in minimalism and focus
+# How setting up a new iPad Pro for work is an exercise in minimalism and focus
 
 The Minimalists coined a term “Packing Party” - which basically means that you pack all of your belongings to boxes like if you were to move to a different house and later you only unpack the things you really need... the same thing is happening to me and my new iPad Pro and iOS11 on it.
 
