updating shows to put video up from more

--- a/en/_posts/2015-06-18-canon.md
+++ b/en/_posts/2015-06-18-canon.md
@@ -6,16 +6,11 @@ vid: "-zB_EevF5jM"
 # Semi Professional Canon EOS 100D DSLR review for a guy like me - Productive! Show #92
 
 
-Today I have a pretty thorough gadget review and unboxing experience of Canon EOS 100D also known as Rebel 1 - a perfect semi-professional camera for an amateur photographer, video-maker and a father who just wants to shoot better pictures of their children. I've done this unboxing a few months back and I've used this camera since on a number of occasions and it's brilliant. Totally recommend it! Also I talk about the accessories I bought with the camera - which, why, and how much it all costs.
+Today I have a pretty thorough gadget review and unboxing experience of Canon EOS 100D also known as Rebel 1 - a perfect semi-professional camera for an amateur photographer, video-maker and a father who just wants to shoot better pictures of their children. I've done this unboxing a few months back and I've used this camera since on a number of occasions and it's brilliant. Totally recommend it! Also I talk about the accessories I bought with the camera - which, why, and how much it all costs. Enjoy and if you've got some pro advice for me - let me know in the comments - I've only started with this!
 
-Enjoy and if you've got some pro advice for me - let me know in the comments - I've only started with this!
-
-Check it out:
 
 {% include video.html id=page.vid %}
 
 <!--More-->
-
-[Watch and comment on YouTube](https://www.youtube.com/watch?v=-zB_EevF5jM "youtube_title")
 
 [n]: https://michael.gratis/nozbe
