fixes to tags with redirects

--- a/en/_posts/2014-01-31-mac.md
+++ b/en/_posts/2014-01-31-mac.md
@@ -35,7 +35,7 @@ Yep, I finally pulled the plunge in November of 2008 and bought a used MacBook A
 
 ## The rest, as they say is the history
 
-In 2009 I got a refreshed generation of the MacBook Air, in November 2010 got the 3rd generation... later in 2011 got my Mac Mini [which you can see on my last video][5] as my main computer and in April 2012 gave up my MacBook Air for the [iPad][io].
+In 2009 I got a refreshed generation of the MacBook Air, in November 2010 got the 3rd generation... later in 2011 got my Mac Mini [which you can see on my last video][5] as my main computer and in April 2012 gave up my MacBook Air for the [iPad][iPadOnly].
 
 ## What's my Mac setup now?
 
@@ -48,7 +48,6 @@ Today I work mostly on my iPad and just recently I bought the MacBook Pro as my 
 [3]: http://www.michaelhyatt.com/
 [4]: http://www.michaelsliwinski.com/macbook-air-rocks-5-things-pc-notebook-manufa/
 [5]: http://www.michaelsliwinski.com/show-home-office-2013
-[6]: 
 [Dropbox]: http://db.tt/kD7Liux
 [Evernote]: http://www.michaelsliwinski.com/how-i-use-evernote
 [iPadOnly]: http://www.michaelsliwinski.com/tag/ipadonly
