--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -5,7 +5,7 @@ cover: "vaccine.jpg"
 
 # Getting vaccination done for COVID-19
 
-Finally both me and my wife managed to get our first shot 💉 of the [Moderna](https://en.wikipedia.org/wiki/Moderna_COVID-19_vaccine) type of [the vaccine](https://en.wikipedia.org/wiki/COVID-19_vaccine) against the [COVID-19](/covid) disease. In this short blog post I want to explain why we got it, why I'm excited about it and why I hope to encourage you to give it a shot (pun intended) as well. Here's us after we got ours:
+Finally both me and my wife managed to get our first shot 💉 of the [Moderna](https://en.wikipedia.org/wiki/Moderna_COVID-19_vaccine) type of [the vaccine](https://en.wikipedia.org/wiki/COVID-19_vaccine) against the [COVID-19](/covid) disease. In this post I want to explain why we got it, why I'm excited about it and why I hope to encourage you to give it a shot (pun intended) as well. Here's us after we got ours:
 
 <!--More-->
 
