--- a/en/_posts/2014-01-14-2013.md
+++ b/en/_posts/2014-01-14-2013.md
@@ -2,7 +2,7 @@
 tags: [yearly]
 img: "2013.jpg"
 redirect_from:
- - /2013/
+ - /summary2013/
 ---
 
 # 2013 was great and for 2014 I intend to keep running in biz & life :-)
